--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link href="styles/reset.css" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet">
+    <meta charset="utf-8">
     <title>Google Homepage Copy</title>
 </head>
 <main>
