added navbar and Google image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Google Homepage Copy</title>
 </head>
 <main>
-    <p>test</p>
+    <div class="navbar">
+        <a id="about" href="#">About</a>
+        <a id="store" href="#">Store</a>
+    </div>
+    <img class="google-logo" src="images/google-logo.png" alt="the Google logo">
 </main>
 </html>
