moved Google logo and added searchbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <a id="about" href="#">About</a>
         <a id="store" href="#">Store</a>
     </div>
-    <img class="google-logo" src="images/google-logo.png" alt="the Google logo">
+    <img class="google-logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="the Google logo">
+    <fieldset>
+        <form id="searchbar" action="#" required>
+            <label class="searchbar" for="searchbar">
+                <input class="search-input" name="searchbar" type="text">
+            </label>
+        </form>
+    </fieldset>
 </main>
 </html>
